Updated with file changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!DOCTYPE html>
+<html lang = "en">
+    <head> 
+        <meta charset="utf-8">
+        <title> My First Dank Meme </title>
+    </head> 
+
+    <body> 
+        <h1> My codebase brings all the boys to the yard </h1>
+        <p> deez nutz do too</p> 
+        <ol> List of Accomplishments
+            <li> There doesn't appear to be anything here. </li>
+        </ol>
+        <nl> Banana Genotypes
+            <li> Vallarta</li>
+        </nl> . 
+    </body>
+
+</html>
