TOP More Website Practice

--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
         <meta charset="utf-8">
         <title> My First Dank Meme </title>
     </head> 
-
+    
+    <!-- this is an HTML comment -->
     <body> 
-        <h1> My codebase brings all the boys to the yard </h1>
-        <p> deez nutz do too</p> 
-        <ol> List of Accomplishments
-            <li> There doesn't appear to be anything here. </li>
-        </ol>
-        <nl> Banana Genotypes
-            <li> Vallarta</li>
-        </nl> . 
+        <h1> My First Website </h1>
+        <h2> Lorem, a Haiku</h2>
+        <p>     
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.
+        </p>
+        <h2> Some Fun Facts </h2>
+        <p> <em>The mitochondria is the powerhouse of the cell. </em> </p>
+
+        <h2> A Haiku</h2> 
+        <p> <strong> Man with no pants, pantsless. </strong> </p> 
+        <p> Man with many pants, overpantsed. </p> 
+        
+        <!-- Man with no code, codeless and jobless. -->
     </body>
 
 </html>
